# codememory

./: .env.example  .gitignore  4-stage-ingestion-with-prep.md  4_pass_ingestion_with_prep_hybridgraphRAG.py  5_continuous_ingestion.py  5_continuous_ingestion_jina.py  AGENTS.md  CHANGELOG.md  Dockerfile  GRAPHRAG_README.md  README.md  SPEC.md  TODO.md  debug_extraction.py  docker-compose.yml  graphrag_requirements.txt  install.ps1  install.sh  pyproject.toml  requirements.txt  upload_checkpoint.py
.claude/: settings.local.json
.github/workflows/: release.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: API.md  ARCHITECTURE.md  FIELD_TEST_RESULTS_2026-02-24.md  FIELD_TEST_TEMPLATE.md  GIT_GRAPH.md  MCP_INTEGRATION.md  MULTI_CODEBASE_RESEARCH.md  MULTI_CODEBASE_RESEARCH_REPORT.md  NEO4J_BROWSER_VISUALIZATION.md  ROADMAP.md  TOOL_USE_ANNOTATION.md  TROUBLESHOOTING.md  evaluation-decision.md
docs/plans/: ultraplan-4.5.26.md
evaluation/: README.md  __init__.py
evaluation/schemas/: benchmark_results.schema.json
evaluation/scripts/: create_run_scaffold.py  summarize_results.py
evaluation/skills/: skill-adapter-workflow.md
evaluation/tasks/: benchmark_tasks.json
evaluation/templates/: decision_memo_template.md
examples/: README.md
src/codememory/: cli.py  config.py  pyproject.toml  telemetry.py
src/codememory/docker/: docker-compose.yml
src/codememory/ingestion/: __init__.py  graph.py  parser.py  watcher.py
src/codememory/server/: __init__.py  app.py  tools.py
tests/: test_cli.py  test_graph.py  test_parser.py  test_server.py
